--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
 
 
-
+<center>Made with <span style="color: #e25555;">&#9829;</span> by Ashish Bravo </center>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
