--- a/index.html
+++ b/index.html
@@ -52,6 +52,16 @@
         <div class="w3-display-middle">
         </div>
     </div>
+    <!-- Third Parallax Image -->
+    <div class="img4 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+     <!-- Third Parallax JULY Image -->
+    <div class="img5 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
 
 
 <center>Made with <span style="color: #e25555;">&#9829;</span> by Ashish Bravo </center>
