--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
 
-<center>Made with <span style="color: #e25555;">&#9829;</span> by Ashish Bravo </center>
+<center>Made with <span style="color: #e25555;">&#9829;</span> by Ashish Bravo | Rohit | Ashima</center>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
