--- a/index.html
+++ b/index.html
@@ -62,6 +62,50 @@
         <div class="w3-display-middle">
         </div>
     </div>
+<!--Adding in numbers -->
+       <!-- Second Parallax Image -->
+    <div class="img6 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+
+    <!-- Third Parallax Image -->
+    <div class="img7 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+    <!-- Third Parallax Image -->
+    <div class="img8 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+     <!-- Third Parallax JULY Image -->
+    <div class="img9 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+       <!-- Second Parallax Image -->
+    <div class="img10 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+
+    <!-- Third Parallax Image -->
+    <div class="img11 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+    <!-- Third Parallax Image -->
+    <div class="img12 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+     <!-- Third Parallax JULY Image -->
+    <div class="img13 w3-display-container w3-opacity-min">
+        <div class="w3-display-middle">
+        </div>
+    </div>
+    
 
 
 <center>Made with <span style="color: #e25555;">&#9829;</span> by Ashish Bravo | Rohit | Ashima</center>
