--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
 <link rel="stylesheet" href="./styles/style.css">
 
 <body>
-    <div class="header">
-        <div id="header-container">
-            <h1 id="header">Happy Birthday Pulkit</h1>
-   
-        </div>
-    </div>
+  
     <div id="container">
         <p>
-            blah
-            blah
-            blah 
-            blah
-            blah
-            blah.
+            Hello Pulkit!
+            This is your Yearbook
+            We believe that you had fun this year
+            Wishing You more fun and happiness in this year.
+            Patience is the key to a better future , So scroll down very patiently
+            and get connected with your memory lane. We also advise to add 
+            A soothing music in background to have a better feel . 
+            Advised "Memories bring back Memories"
         </p>
     </div>
 
